--- a/style.css
+++ b/style.css
@@ -1,5 +1,36 @@
+html {
+  height: 100%;
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 10px;
+  background: linear-gradient(to bottom right, #3cf 0%, #f9c 100%);
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1.95rem;
+}
+
+h1 {
+  text-align: center;
+}
+
+p {
+  display: inline;
+  padding-left: 5px;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex--justify-content {
+  justify-content: center;
+}
+
+.flex--flex-direction {
+  flex-direction: column;
+}
+
+.block {
+  display: inline;
+  text-align: left;
+  width: 140px;
 }
